--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -107,7 +107,7 @@
         <div class="col">
             <form action="{{url_for('clear_content')}}" method='POST'
                   onsubmit='return confirm("Are you sure to clear all contents in database and S3?")'>
-                <input class="btn btn-danger float-right" type='submit' value='Clear Content'/>
+                <input class="btn btn-danger float-right" type='submit' value='Clear Data'/>
             </form>
         </div>
     </div>
