--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -54,7 +54,7 @@
     </form>
     <br>
     <div class="row">
-        <table class="table">
+        <table class="table" id="worker_table">
             <thead>
             <tr>
                 <th scope="col">grow threshold</th>
