--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% block meta_content %}
+<meta http-equiv="refresh" content="5">
+{% endblock %}
+
 {% block content %}
 <br>
 <div class="container">
